[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/popup_name.gd" type="Script" id=1]
[ext_resource path="res://imagens/button/salvarc.png" type="Texture" id=2]
[ext_resource path="res://scripts/ColorRect.gd" type="Script" id=3]
[ext_resource path="res://imagens/button/salvare.png" type="Texture" id=4]
[ext_resource path="res://scripts/qntdp.gd" type="Script" id=5]

[node name="popup_name" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 475.0
margin_top = 268.0
margin_right = 902.0
margin_bottom = 516.0
script = ExtResource( 3 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 614.0
margin_top = 277.0
margin_right = 763.0
margin_bottom = 316.0
clear_button_enabled = true
placeholder_text = "1ยบ Participante"
placeholder_alpha = 0.9
caret_blink = true

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 614.0
margin_top = 325.0
margin_right = 763.0
margin_bottom = 364.0
clear_button_enabled = true
placeholder_text = "2ยบ Participante"
placeholder_alpha = 0.9
caret_blink = true

[node name="LineEdit3" type="LineEdit" parent="."]
margin_left = 615.0
margin_top = 372.0
margin_right = 764.0
margin_bottom = 411.0
clear_button_enabled = true
placeholder_text = "3ยบ Participante"
placeholder_alpha = 0.9
caret_blink = true

[node name="LineEdit4" type="LineEdit" parent="."]
margin_left = 615.0
margin_top = 417.0
margin_right = 764.0
margin_bottom = 456.0
clear_button_enabled = true
placeholder_text = "4ยบ Participante"
placeholder_alpha = 0.9
caret_blink = true

[node name="saveButton" type="TextureButton" parent="."]
margin_left = 605.0
margin_top = 471.0
margin_right = 1015.0
margin_bottom = 570.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )

[node name="qntdp" type="OptionButton" parent="."]
margin_left = 790.0
margin_top = 342.0
margin_right = 827.0
margin_bottom = 362.0
text = "0"
script = ExtResource( 5 )

[connection signal="pressed" from="saveButton" to="." method="_on_saveButton_pressed"]
[connection signal="item_selected" from="qntdp" to="." method="_on_qntdp_item_selected"]
